--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/EdgeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/EdgeDevToolPane.fxml
@@ -29,15 +29,11 @@
                   <Insets right="10.0" />
                </HBox.margin>
             </Label>
-            <ChoiceBox minWidth="0.0" prefHeight="25.0" prefWidth="45.0" value="m">
-               <contextMenu>
-                  <ContextMenu>
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="m" />
-                        <MenuItem mnemonicParsing="false" text="in" />
-                    </items>
-                  </ContextMenu>
-               </contextMenu></ChoiceBox>
+            <Label text="m">
+               <HBox.margin>
+                  <Insets left="-5.0" />
+               </HBox.margin>
+            </Label>
          </children>
       </HBox>
       <Label text="Tags:" />
@@ -51,7 +47,7 @@
         </rowConstraints>
          <children>
             <CheckBox fx:id="accessibleCheckbox" mnemonicParsing="false" onAction="#switchAccessible" text="Accessible" />
-            <CheckBox fx:id="walkwayCheckbox" mnemonicParsing="false" onAction="#switchWalkway" text="Walkway" GridPane.columnIndex="1" />
+            <CheckBox fx:id="walkwayCheckbox" mnemonicParsing="false" onAction="#switchWalkway" text="Walkway" visible="false" GridPane.columnIndex="1" />
          </children>
       </GridPane>
       <Separator prefWidth="200.0" />
