--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
@@ -88,14 +88,14 @@
             <Button fx:id="changeImageButton" alignment="TOP_LEFT" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#changeImage" text="Change" StackPane.alignment="CENTER_RIGHT" />
          </children>
       </StackPane>
-      <CheckBox fx:id="autoEdgeSelector" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAutoEdge" text="AutoEdge" />
-      <ToggleButton fx:id="selectColorButton" mnemonicParsing="false" onAction="#selectColorOnMap" text="Select Color" />
-      <Label text="Walkable Color" />
-      <ScrollPane prefHeight="200.0" prefWidth="200.0">
+      <CheckBox fx:id="autoEdgeSelector" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAutoEdge" text="AutoEdge" visible="false" />
+      <ToggleButton fx:id="selectColorButton" mnemonicParsing="false" onAction="#selectColorOnMap" text="Select Color" visible="false" />
+      <Label text="Walkable Color" visible="false" />
+      <ScrollPane prefHeight="200.0" prefWidth="200.0" visible="false">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="219.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="219.0" visible="false">
                <children>
-                  <GridPane alignment="CENTER" layoutX="6.0" prefHeight="90.0" prefWidth="213.0">
+                  <GridPane alignment="CENTER" layoutX="6.0" prefHeight="90.0" prefWidth="213.0" visible="false">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
