--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
@@ -67,7 +67,7 @@
          </rowConstraints>
       </GridPane>
       <Label minWidth="0.0" text="Tags:" />
-      <GridPane prefHeight="44.0" prefWidth="235.0">
+      <!--GridPane prefHeight="44.0" prefWidth="235.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -81,7 +81,7 @@
             <CheckBox fx:id="accessibleCheckbox" mnemonicParsing="false" onAction="#toggleIsAccessible" text="Accessibility" GridPane.columnIndex="1" />
             <CheckBox mnemonicParsing="false" onAction="#toggleIsFood" text="Food" GridPane.rowIndex="1" />
          </children>
-      </GridPane>
+      </GridPane-->
       <BorderPane minWidth="0.0">
          <center>
             <TextField fx:id="tagTextField" minWidth="0.0" promptText="Add Custom Tag" BorderPane.alignment="CENTER" />
@@ -95,17 +95,17 @@
          <center>
             <BorderPane minWidth="0.0" BorderPane.alignment="CENTER">
                <center>
-                  <TextField alignment="CENTER" minWidth="0.0" prefHeight="25.0" text="5" BorderPane.alignment="CENTER">
+                  <!-- TextField alignment="CENTER" minWidth="0.0" prefHeight="25.0" text="5" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </BorderPane.margin>
-                  </TextField>
+                  </TextField-->
                </center>
                <left>
-                  <Label minWidth="0.0" text="Node Size:" BorderPane.alignment="CENTER" />
+                  <!-- Label minWidth="0.0" text="Node Size:" BorderPane.alignment="CENTER" /-->
                </left>
                <right>
-                  <Label minWidth="0.0" text="px" BorderPane.alignment="CENTER" />
+                  <!-- Label minWidth="0.0" text="px" BorderPane.alignment="CENTER" /-->
                </right>
                <BorderPane.margin>
                   <Insets right="5.0" />
@@ -113,15 +113,15 @@
             </BorderPane>
          </center>
          <right>
-            <HBox minWidth="0.0" spacing="5.0" BorderPane.alignment="CENTER">
+            <!-- HBox minWidth="0.0" spacing="5.0" BorderPane.alignment="CENTER">
                <children>
                   <Label maxHeight="1.7976931348623157E308" minWidth="0.0" text="Color:" />
                   <ColorPicker editable="true" maxWidth="55.0" minWidth="0.0" promptText="Node Color" />
                </children>
-            </HBox>
+            </HBox-->
          </right>
       </BorderPane>
-      <Label minWidth="0.0" text="Connected Edges" />
-      <ListView fx:id="edgeListView" minWidth="0.0" prefHeight="30.0" />
+      <!-- Label minWidth="0.0" text="Connected Edges" /-->
+      <!--ListView fx:id="edgeListView" minWidth="0.0" prefHeight="30.0" /-->
    </children>
 </fx:root>
