--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/DirectionsMenuPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/DirectionsMenuPane.fxml
@@ -28,10 +28,26 @@
                     <content>
                         <VBox minHeight="0.0" minWidth="0.0">
                            <children>
-                           	   <CheckBox fx:id="accessibleCheckbox" onAction="#selectAccessible" text="Prioritize Accessibility" />
+                            <GridPane prefHeight="44.0" prefWidth="235.0">
+        						<columnConstraints>
+         				 			<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+          							<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        						</columnConstraints>
+        						<rowConstraints>
+          							<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        						</rowConstraints>
+         						<children>
+                           	   	<CheckBox fx:id="accessibleCheckbox" onAction="#selectAccessible" text="Prioritize Accessibility" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                           	  	<Button fx:id="foodButton" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" text="Find nearest food" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+                       			<Button fx:id="mensRoomButton" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" text="Find nearest men's room" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+                       			<Button fx:id="womensRoomButton" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" text="Find nearest women's room" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+                       			<Button fx:id="genderNeutralRestroomButton" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" text="Find nearest gender neutral restroom" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
                                <!-- CheckBox text="Indoors" /-->
                                <!-- CheckBox text="Stairs" /-->
                                <!-- CheckBox text="Wind Tunnel" /-->
+                                    </children>
+      							</GridPane>
                            </children>
                         </VBox>
                     </content>
