--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/NodeDevToolPane.fxml
@@ -69,7 +69,7 @@
       <Label minWidth="0.0" text="Tags:" />
       <GridPane prefHeight="44.0" prefWidth="235.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
@@ -77,9 +77,12 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <CheckBox mnemonicParsing="false" onAction="#toggleIsBathroom" text="Bathroom" />
-            <CheckBox fx:id="accessibleCheckbox" mnemonicParsing="false" onAction="#toggleIsAccessible" text="Accessibility" GridPane.columnIndex="1" />
-            <CheckBox mnemonicParsing="false" onAction="#toggleIsFood" text="Food" GridPane.rowIndex="1" />
+            <CheckBox fx:id="accessibleCheckbox" mnemonicParsing="false" onAction="#toggleIsAccessible" text="Accessibility" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <CheckBox fx:id="foodCheckbox" mnemonicParsing="false" onAction="#toggleIsFood" text="Food" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+            <CheckBox fx:id="mensCheckbox" mnemonicParsing="false" onAction="#toggleIsMens" text="Men's Restroom" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <CheckBox fx:id="womensCheckbox" mnemonicParsing="false" onAction="#toggleIsWomens" text="Women's Restroom" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+            <CheckBox fx:id="genderNeutralCheckbox" mnemonicParsing="false" onAction="#toggleIsGenderNeutral" text="Gender Neutral Restroom" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+
          </children>
       </GridPane>
       <BorderPane minWidth="0.0">
