--- a/src/edu/wpi/off/by/one/errors/code/view/MapRootPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/MapRootPane.fxml
@@ -11,6 +11,7 @@
             <Canvas fx:id="canvas" height="150.0" width="200.0" />
             <Pane fx:id="edgeLayer" prefHeight="150.0" prefWidth="200.0" />
             <StackPane fx:id="nodeLayer" prefHeight="150.0" prefWidth="200.0" />
+            <Pane fx:id="iconLayer" prefHeight="150.0" prefWidth="200.0" />
             <Pane fx:id="pathPane" prefHeight="150.0" prefWidth="200.0" />
             <Pane fx:id="markerPane" prefHeight="150.0" prefWidth="200.0" />
          </children>
