--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/devtoolspanes/MapDevToolPane.fxml
@@ -88,31 +88,24 @@
             <Button fx:id="changeImageButton" alignment="TOP_LEFT" contentDisplay="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#changeImage" text="Change" StackPane.alignment="CENTER_RIGHT" />
          </children>
       </StackPane>
-      <CheckBox fx:id="autoEdgeSelector" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAutoEdge" text="AutoEdge" visible="false" />
-      <ToggleButton fx:id="selectColorButton" mnemonicParsing="false" onAction="#selectColorOnMap" text="Select Color" visible="false" />
-      <Label text="Walkable Color" visible="false" />
-      <ScrollPane prefHeight="200.0" prefWidth="200.0" visible="false">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="219.0" visible="false">
+      <BorderPane prefHeight="41.0" prefWidth="235.0">
+         <top>
+            <Label prefHeight="17.0" prefWidth="240.0" text="Map Tag" BorderPane.alignment="CENTER" />
+         </top>
+         <right>
+            <Button mnemonicParsing="false" onAction="#assignMapTag" text="Add" BorderPane.alignment="CENTER" />
+         </right>
+         <center>
+            <TextField fx:id="mapTagTextField" onAction="#assignMapTag" BorderPane.alignment="CENTER" />
+         </center>
+         <bottom>
+            <HBox prefHeight="24.0" prefWidth="235.0" BorderPane.alignment="CENTER">
                <children>
-                  <GridPane alignment="CENTER" layoutX="6.0" prefHeight="90.0" prefWidth="213.0" visible="false">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <ColorPicker fx:id="walkableColorSelector" onAction="#setWalkableColor" prefHeight="25.0" prefWidth="104.0" />
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Add Color" GridPane.columnIndex="1" />
-                     </children>
-                  </GridPane>
+                  <Button mnemonicParsing="false" onAction="#reaffiliateNodes" prefHeight="25.0" prefWidth="117.5" text="Reaffiliate Nodes" />
+                  <Button mnemonicParsing="false" onAction="#disaffiliateNodes" prefHeight="25.0" prefWidth="117.5" text="Disaffiliate Nodes" />
                </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
+            </HBox>
+         </bottom>
+      </BorderPane>
    </children>
 </fx:root>
