--- a/src/edu/wpi/off/by/one/errors/code/resources/stylesheets/MenuPaneStyleSheet.css
+++ b/src/edu/wpi/off/by/one/errors/code/resources/stylesheets/MenuPaneStyleSheet.css
@@ -12,7 +12,7 @@
 }
 
 #hamburgerToggleButton{
-    -fx-background-image: url("../icons/white/HideWhite.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/hideWhite.png");
     -fx-background-size: cover;
 }
 
@@ -22,72 +22,72 @@
 
 /*Search Button States*/
 #searchMenuRadioButton{
-    -fx-background-image: url("../icons/white/MagnifyWhite.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/MagnifyWhite.png");
     -fx-background-size: cover;
 }
 
 #searchMenuRadioButton:selected{
     -fx-background-color: #FFFFFF;
-    -fx-background-image: url("../icons/red/MagnifyRed.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/red/MagnifyRed.png");
     -fx-background-size: cover;
 }
 
 /*Directions Button States*/
 #directionsMenuRadioButton{
-    -fx-background-image: url("../icons/white/TurnRightArrowWhite.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/TurnRightArrowWhite.png");
     -fx-background-size: cover;
 }
 
 #directionsMenuRadioButton:selected{
     -fx-background-color: #FFFFFF;
-    -fx-background-image: url("../icons/red/TurnRightArrowRed.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/red/turnrightarrowRed.png");
     -fx-background-size: cover;
 }
 
 /*Favorites Button States*/
 #favoritesMenuRadioButton{
-    -fx-background-image: url("../icons/white/Favorite.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/Favorite.png");
     -fx-background-size: cover;
 }
 
 #favoritesMenuRadioButton:selected{
     -fx-background-color: #FFFFFF;
-    -fx-background-image: url("../icons/red/FavoriteRed.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/red/FavoriteRed.png");
     -fx-background-size: cover;
 }
 
 /*Dev mode Button States*/
 #devToolMenuRadioButton{
-    -fx-background-image: url("../icons/white/DevIcon.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/devIcon.png");
     -fx-background-size: cover;
 }
 
 #devToolMenuRadioButton:selected{
     -fx-background-color: #FFFFFF;
-    -fx-background-image: url("../icons/red/DevIconRed.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/red/devIconRed.png");
     -fx-background-size: cover;
 }
 
 /*Settings Button States*/
 #settingsMenuRadioButton{
-    -fx-background-image: url("../icons/white/Settings.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/settings.png");
     -fx-background-size: cover;
 }
 
 #settingsMenuRadioButton:selected{
     -fx-background-color: #FFFFFF;
-    -fx-background-image: url("../icons/red/SettingsRed.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/red/settingsRed.png");
     -fx-background-size: cover;
 }
 
 /*Help Button States*/
 #helpMenuRadioButton{
-    -fx-background-image: url("../icons/white/Question.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/white/Question.png");
     -fx-background-size: cover;
 }
 
 #helpMenuRadioButton:selected{
     -fx-background-color: #FFFFFF;
-    -fx-background-image: url("../icons/red/QuestionRed.png");
+    -fx-background-image: url("/edu/wpi/off/by/one/errors/code/resources/icons/red/QuestionRed.png");
     -fx-background-size: cover;
 }
