--- a/src/edu/wpi/off/by/one/errors/code/view/menupanes/HelpMenuPane.fxml
+++ b/src/edu/wpi/off/by/one/errors/code/view/menupanes/HelpMenuPane.fxml
@@ -1,11 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="46.0" prefWidth="181.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="label" text="Help Pane here" />
+      <Accordion>
+        <panes>
+          <TitledPane animated="false" text="Selecting Start/End Points">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </TitledPane>
+          <TitledPane animated="false" text="Searching">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </TitledPane>
+          <TitledPane animated="false" text="Map Controls">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <VBox prefHeight="180.0" prefWidth="202.0">
+                           <children>
+                              <BorderPane prefHeight="53.0" prefWidth="200.0">
+                                 <top>
+                                    <Label prefHeight="17.0" prefWidth="210.0" text="Moving Around Map (Panning)" BorderPane.alignment="CENTER" />
+                                 </top>
+                                 <left>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <center>
+                                    <Label prefHeight="17.0" prefWidth="197.0" text="Click + Drag" BorderPane.alignment="CENTER" />
+                                 </center>
+                              </BorderPane>
+                              <BorderPane prefHeight="57.0" prefWidth="202.0">
+                                 <top>
+                                    <Label prefHeight="11.0" prefWidth="202.0" text="Rotating" BorderPane.alignment="CENTER" />
+                                 </top>
+                                 <left>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+                                 </left>
+                                 <center>
+                                    <Label prefHeight="6.0" prefWidth="177.0" text="Alt + Right-Click + Drag" BorderPane.alignment="CENTER" />
+                                 </center>
+                              </BorderPane>
+                              <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                 <top>
+                                    <Label prefHeight="17.0" prefWidth="268.0" text="Zooming" BorderPane.alignment="CENTER" />
+                                 </top>
+                                 <center>
+                                    <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                                       <children>
+                                          <Label text="Ctrl + Right-Click + Drag" />
+                                       </children>
+                                    </VBox>
+                                 </center>
+                                 <left>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+                                 </left>
+                              </BorderPane>
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </TitledPane>
+        </panes>
+      </Accordion>
     </children>
 </fx:root>
